Fix Set creation